# satoshis-arcade-mcp

./: .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  README.md  VERCEL_DEPLOYMENT.md  database.py  deploy_to_render.py  deploy_vercel.py  main.py  pyproject.toml  quick_deploy.py  railway_deploy.md  render.yaml  requirements.txt  test_deployment.py  vercel.json
.github/workflows/: deploy.yml
ai/: difficulty_agent.py
api/: __init__.py  database.py  index.py  main.py
api/ai/: __init__.py  difficulty_agent.py
api/routes/: leaderboard.py  pingpong.py  tetris.py
api/static/: manifest.json  service-worker.js
api/static/arcade/: index.html
api/static/pingpong/: index.html
api/static/tetris/: index.html
docs/: PROJECT_DESCRIPTION.md  deploy_railway.md
frontend/arcade/: index.html
frontend/pingpong/: index.html
frontend/tetris/: index.html
scripts/: direct_deploy.py  working_deploy.py
